--- a/client/src/app/pages/hotel-details/hotel-details.component.html
+++ b/client/src/app/pages/hotel-details/hotel-details.component.html
@@ -1,40 +1,46 @@
-    <main class="hotel-details-container" *ngIf="hotel" >
-        <section class="hotel-details-title-wrapper">
-            <h2>{{hotel.hotelName}}</h2>
-            <!-- <div *ngIf="apiLoaded | async">
+<main class="hotel-details-container" *ngIf="hotel">
+    <section class="hotel-details-title-wrapper">
+        <h2>{{hotel.hotelName}}</h2>
+        <!-- <div *ngIf="apiLoaded | async">
                 <google-map />
             </div> -->
-            <div>
-                <svg *ngFor="let _ of [].constructor(hotel.stars)" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512">
-                    <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/>
+        <div>
+            <svg *ngFor="let _ of [].constructor(hotel.stars)" xmlns="http://www.w3.org/2000/svg" height="1em"
+                viewBox="0 0 576 512">
+                <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path
+                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
             </svg>
+        </div>
+    </section>
+    <section class="hotel-details-image-booking-wrapper">
+        <div class="hotel-details-image">
+            <img src={{hotel.imgURL}} alt="" srcset="">
+        </div>
+        <div class="hotel-details-booking">
+            <p>Location: {{hotel.hotelLocation}}</p>
+            <p>Type: {{hotel.type}}</p>
+            <p>Free Rooms: {{hotel.freeRooms}} rooms available</p>
+            <p>Price: {{hotel.price}} <span>per room</span></p>
+            <div class="hotel-details-rating">
+                <p>Rating: <span class="hotel-details-raiting-value">{{hotel.rating}}</span></p>
+                <p class="hotel-details-raiting-text">{{hotel.grade}}</p>
+                <p class="hotel-details-raiting-counts">({{hotel.reviewsCount}} Reviews)</p>
             </div>
-        </section>
-        <section class="hotel-details-image-booking-wrapper">
-            <div class="hotel-details-image">
-                <img src={{hotel.imgURL}}
-                    alt="" srcset="">
+            <button>Book now!</button>
+        </div>
+    </section>
+    <section class="hotel-details-information-wrapper">
+        <div class="hotel-details-information-description">
+            <div class="hotel-details-information-title">
+                <div class="hotel-details-information-title-border"> </div>
+                <h3>Description</h3>
+                <div class="hotel-details-information-title-border"> </div>
             </div>
-            <div class="hotel-details-booking">
-                <p>Location: {{hotel.hotelLocation}}</p>
-                <p>Type: {{hotel.type}}</p>
-                <p>Free Rooms: {{hotel.freeRooms}} rooms available</p>
-                <p>Price: {{hotel.price}} <span>per room</span></p>
-                <p>Rating: {{hotel.rating}} <span>Good </span><span>3433 reviews</span></p>
-                <button>Book now!</button>
+            <div>
+                <p>{{hotel.description}}</p>
             </div>
-        </section>
-        <section class="hotel-details-information-wrapper">
-            <div class="hotel-details-information-description">
-                <div class="hotel-details-information-title">
-                    <div class="hotel-details-information-title-border"> </div>
-                    <h3>Description</h3>
-                    <div class="hotel-details-information-title-border"> </div>
-                </div>
-                <div>
-                    <p>{{hotel.description}}</p>
-                </div>
-            </div>
-            <app-reviews [hotelId]="hotelId" [reviews]="hotel.reviews"/>
-        </section>
-    </main>
+        </div>
+        <app-reviews [hotelId]="hotelId" [reviews]="hotel.reviews" />
+    </section>
+</main>
