Seperated reviews. Added pagination

--- a/client/src/app/pages/hotel-details/hotel-details.component.html
+++ b/client/src/app/pages/hotel-details/hotel-details.component.html
@@ -41,6 +41,9 @@
                 <p>{{hotel.description}}</p>
             </div>
         </div>
-        <app-reviews [hotelId]="hotelId" [reviews]="hotel.reviews" />
+        <app-reviews
+            [hotelId]="hotelId"
+            [hotelReviewsCount]="hotel.reviewsCount"
+        />
     </section>
 </main>
