--- a/client/src/app/pages/hotel-details/review-form/review-form.component.html
+++ b/client/src/app/pages/hotel-details/review-form/review-form.component.html
@@ -1,4 +1,4 @@
-<div class="review-card" *ngIf="userService.isLogged">
+<div class="review-card" *ngIf="userService.isLogged && !hasReview">
     <div class="review-card-avatar">
             <svg xmlns=" http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
         <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
