--- a/client/src/app/core/error/error.component.css
+++ b/client/src/app/core/error/error.component.css
@@ -1,3 +1,19 @@
-.error-message {
-    color: red;
-}
+.notification {
+    position: absolute;
+    z-index: 10;
+    left: 50%;
+    top: 0%;
+    transform: translate(-50%);
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    color: rgb(255, 255, 255);
+    font-style: italic;
+    text-align: center;
+    box-shadow: 0 5px 10px rgb(204, 204, 204);
+    width: 100%;
+  }
+  
+  .error-message {
+    background-color: red
+  }
+  
