--- a/client/src/app/core/error/error.component.html
+++ b/client/src/app/core/error/error.component.html
@@ -1,3 +1,3 @@
-<p class="error-message">
-    {{errorMsg}}
+<p class="notification error-message" *ngIf="apiError$ | async as error">
+    Email already exist
 </p>
