Login shows api notifications

--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <main>
     <section class="login-form">
         <form [formGroup]="loginForm" (ngSubmit)="login()">
+            <app-error />
             <div class="login-user-icon">
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
