seperated edit button. Added edit and delete only for admin

--- a/client/src/app/pages/destinations/destinations.component.html
+++ b/client/src/app/pages/destinations/destinations.component.html
@@ -22,7 +22,8 @@
                 (detinationData)="onDestinationEdit($event)"
                 (destinationListUpdated)="handleDestinationListUpdate($event)">
             </app-destination-card>
-            <app-add-destination-card
+            
+            <app-add-destination-card *ngIf="userService.isLogged && userService.userInformation.isAdmin"
                 (createDestinationClicked)="onDestinationCreate($event)">
             </app-add-destination-card>
         </div>
@@ -38,7 +39,7 @@
                 (detinationData)="onDestinationEdit($event)"
                 (destinationListUpdated)="handleDestinationListUpdate($event)">
             </app-destination-card>
-            <app-add-destination-card
+            <app-add-destination-card *ngIf="userService.isLogged && userService.userInformation.isAdmin"
                 (createDestinationClicked)="onDestinationCreate($event)">
             </app-add-destination-card>
         </div>
