--- a/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
+++ b/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
@@ -25,6 +25,16 @@
                             <input id="hotel-name" class="create-hotel-input" name="hotelName"
                                 formControlName="hotelName">
                         </div>
+                        <ng-container *ngIf="hotelForm.get('hotelName')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('hotelName')?.errors?.['required']; else customValidator">
+                                *Hotel name is required!
+                            </p>
+                            <ng-template #customValidator>
+                                <p class="error" *ngIf="hotelForm.get('hotelName')?.errors?.['customHotelName']">
+                                    *Hotel name must contain only latin letters!
+                                </p>
+                            </ng-template>
+                        </ng-container>
                     </div>
                     <div class="create-hotel-input-wrapper">
                         <label for="hotel-location" class="create-hotel-label">Location</label>
@@ -39,6 +49,16 @@
                             <input id="hotel-location" class="create-hotel-input" name="hotelLocation"
                                 formControlName="hotelLocation">
                         </div>
+                        <ng-container *ngIf="hotelForm.get('hotelLocation')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('hotelLocation')?.errors?.['required']; else customValidator">
+                                *Location is required!
+                            </p>
+                            <ng-template #customValidator>
+                                <p class="error" *ngIf="hotelForm.get('hotelLocation')?.errors?.['customHotelLocation']">
+                                    *Location name must contain only latin letters!
+                                </p>
+                            </ng-template>
+                        </ng-container>
                     </div>
                     <div class="create-hotel-input-wrapper">
                         <label for="hotel-image" class="create-hotel-label">Image URL</label>
@@ -52,6 +72,16 @@
                             </div>
                             <input id="hotel-image" class="create-hotel-input" name="imgURL" formControlName="imgURL">
                         </div>
+                        <ng-container *ngIf="hotelForm.get('imgURL')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('imgURL')?.errors?.['required']; else customValidator">
+                                *Image URL is required!
+                            </p>
+                            <ng-template #customValidator>
+                                <p class="error" *ngIf="hotelForm.get('imgURL')?.errors?.['customHotelImgURL']">
+                                    *Image URL is invalid!
+                                </p>
+                            </ng-template>
+                        </ng-container>
                     </div>
                     <div class="create-hotel-input-wrapper">
                         <label for="hotel-stars" class="create-hotel-label">Stars</label>
@@ -63,8 +93,19 @@
                                         d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                                 </svg>
                             </div>
-                            <input id="hotel-stars" class="create-hotel-input" name="stars" formControlName="stars">
+                            <select id="hotel-stars" class="create-hotel-input" name="stars" formControlName="stars">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                                <option value="1">5</option>
+                            </select>
                         </div>
+                        <ng-container *ngIf="hotelForm.get('stars')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('stars')?.errors?.['required']">
+                                *Hotel stars are required!
+                            </p>
+                        </ng-container>
                     </div>
                     <div class="create-hotel-input-wrapper">
                         <label for="hotel-type" class="create-hotel-label">Type</label>
@@ -78,6 +119,11 @@
                             </div>
                             <input id="hotel-type" class="create-hotel-input" name="type" formControlName="type">
                         </div>
+                        <ng-container *ngIf="hotelForm.get('type')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('type')?.errors?.['required']">
+                                *Type is required!
+                            </p>
+                        </ng-container>
                     </div>
                     <div class="create-hotel-input-wrapper">
                         <!-- fix this -->
@@ -92,6 +138,16 @@
                             </div>
                             <input id="hotel-price" class="create-hotel-input" name="price" formControlName="price">
                         </div>
+                        <ng-container *ngIf="hotelForm.get('price')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('price')?.errors?.['required']; else customValidator">
+                                *Price is required!
+                            </p>
+                            <ng-template #customValidator>
+                                <p class="error" *ngIf="hotelForm.get('price')?.errors?.['customHotelPrice']">
+                                    *Price is invalid!
+                                </p>
+                            </ng-template>
+                        </ng-container>
                     </div>
                     <div class="create-hotel-input-wrapper">
                         <label for="hotel-free-rooms" class="create-hotel-label">Free rooms</label>
@@ -107,6 +163,16 @@
                             <input id="freeRooms" class="create-hotel-input" name="freeRooms"
                                 formControlName="freeRooms">
                         </div>
+                        <ng-container *ngIf="hotelForm.get('freeRooms')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('freeRooms')?.errors?.['required']; else customValidator">
+                                *Free rooms is required!
+                            </p>
+                            <ng-template #customValidator>
+                                <p class="error" *ngIf="hotelForm.get('freeRooms')?.errors?.['customHotelFreeRooms']">
+                                    *Free rooms is invalid!
+                                </p>
+                            </ng-template>
+                        </ng-container>
                     </div>
                 </div>
                 <div class="create-hotel-rightside-wrapper">
@@ -116,6 +182,16 @@
                             <textarea id="description" class="create-hotel-input" name="description"
                                 formControlName="description"></textarea>
                         </div>
+                        <ng-container *ngIf="hotelForm.get('description')?.touched">
+                            <p class="error" *ngIf="hotelForm.get('description')?.errors?.['required']; else customValidator">
+                                *Description is required!
+                            </p>
+                            <ng-template #customValidator>
+                                <p class="error" *ngIf="hotelForm.get('description')?.errors?.['minlength']">
+                                    *Description must be at least 50 characters long!
+                                </p>
+                            </ng-template>
+                        </ng-container>
                     </div>
                 </div>
             </div>
