--- a/client/src/app/pages/hotels/hotels.component.html
+++ b/client/src/app/pages/hotels/hotels.component.html
@@ -21,7 +21,7 @@
         </div>
     </section>
     <section class="destination-selected-hotel-cards-wrapper">
-        <app-add-hotel-card />
+        <app-add-hotel-card *ngIf="userService.isLogged && userService.userInformation.isAdmin"/>
         <app-hotel-card *ngFor="let hotel of destination?.hotels"
             [hotel]="hotel"
             [destinationLocation]="destination?.destinationLocation"
