--- a/client/src/app/pages/hotel-details/review-form/review-form.component.html
+++ b/client/src/app/pages/hotel-details/review-form/review-form.component.html
@@ -20,7 +20,7 @@
         <div class="review-input">
             <textarea placeholder="Leave your review here..." name="text" formControlName="text"
                 (input)="autoExpand($event)"></textarea>
-            <div class="review-input-send-button" (click)="createReview()">
+            <div class="review-input-send-button" (click)="reviewToEdit? editReview(): createReview()">
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                     <path
