--- a/client/src/app/pages/hotel-details/reviews/reviews.component.html
+++ b/client/src/app/pages/hotel-details/reviews/reviews.component.html
@@ -6,29 +6,39 @@
     </div>
     <div class="reviews-card-wrapper">
         <div class="review-card" *ngFor="let review of reviews">
-            <div class="review-card-avatar">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <path
-                        d="M224 256A128 128 0 1 1 224 0a128 128 0 1 1 0 256zM209.1 359.2l-18.6-31c-6.4-10.7 1.3-24.2 13.7-24.2H224h19.7c12.4 0 20.1 13.6 13.7 24.2l-18.6 31 33.4 123.9 36-146.9c2-8.1 9.8-13.4 17.9-11.3c70.1 17.6 121.9 81 121.9 156.4c0 17-13.8 30.7-30.7 30.7H285.5c-2.1 0-4-.4-5.8-1.1l.3 1.1H168l.3-1.1c-1.8 .7-3.8 1.1-5.8 1.1H30.7C13.8 512 0 498.2 0 481.3c0-75.5 51.9-138.9 121.9-156.4c8.1-2 15.9 3.3 17.9 11.3l36 146.9 33.4-123.9z" />
-                </svg>
-            </div>
-            <div class="review-content">
-                <div class="review-avatar-info">
-                    <div class="review-avatar-info-user">
-                        <p class="review-avatar-info-username">{{review._ownerId?.firstName}} {{review._ownerId?.lastName}}</p>
-                        <p class="review-avatar-info-rating">{{review.rating}}</p>
-                    </div>
-                    <p>{{review.createdAt | timestamp}}</p>
+            <ng-container *ngIf="!review?.editing">
+                <div class="review-card-avatar">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                        viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <path
+                            d="M224 256A128 128 0 1 1 224 0a128 128 0 1 1 0 256zM209.1 359.2l-18.6-31c-6.4-10.7 1.3-24.2 13.7-24.2H224h19.7c12.4 0 20.1 13.6 13.7 24.2l-18.6 31 33.4 123.9 36-146.9c2-8.1 9.8-13.4 17.9-11.3c70.1 17.6 121.9 81 121.9 156.4c0 17-13.8 30.7-30.7 30.7H285.5c-2.1 0-4-.4-5.8-1.1l.3 1.1H168l.3-1.1c-1.8 .7-3.8 1.1-5.8 1.1H30.7C13.8 512 0 498.2 0 481.3c0-75.5 51.9-138.9 121.9-156.4c8.1-2 15.9 3.3 17.9 11.3l36 146.9 33.4-123.9z" />
+                    </svg>
                 </div>
-                <div class="review-text">{{review.text}}</div>
+                <div class="review-content">
+                    <div class="review-avatar-info">
+                        <div class="review-avatar-info-user">
+                            <p class="review-avatar-info-username">{{review._ownerId?.firstName}}
+                                {{review._ownerId?.lastName}}</p>
+                            <p class="review-avatar-info-rating">{{review.rating}}</p>
+                        </div>
+                        <p>{{review.createdAt | timestamp}}</p>
+                    </div>
+                    <div class="review-text">{{review.text}}</div>
+                    <div class="review-options">
+                        <p (click)="onEditClicked(review)">Edit</p>
+                        <p>Delete</p>
+                    </div>
+                </div>
+            </ng-container>
+            <div class="review-form-container" *ngIf="review?.editing">
+                <app-review-form 
+                    [reviewToEdit]="reviewToEdit"
+                    [reviewList]="reviews"
+                    (reviewListUpdated)="handleReviewListUpdate($event, review)"/>
             </div>
         </div>
-        <app-review-form
-            [hotelId]="hotelId"
-            [reviewList]="reviews"
-            (reviewListUpdated)="handleReviewListUpdate($event)"
-            />
+        <app-review-form [hotelId]="hotelId" [reviewList]="reviews"
+            (reviewListUpdated)="handleReviewListUpdate($event)" />
         <div class="review-load-more" *ngIf="hotelReviewsCount > reviews.length">
             <button (click)="loadMoreReviews()">Load more</button>
         </div>
