--- a/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
+++ b/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
@@ -9,7 +9,7 @@
             </svg>
         </div>
         <h3 class="create-hotel-modal-title">Create Hotel</h3>
-        <form [formGroup]="hotelForm" (ngSubmit)="createHotel()">
+        <form [formGroup]="hotelForm" (ngSubmit)="hotelToEdit? editHotel():createHotel()">
             <div class="create-hotel-form-wrapper">
                 <div class="create-hotel-leftside-wrapper">
                     <div class="create-hotel-input-wrapper">
@@ -95,10 +95,10 @@
                             </div>
                             <select id="hotel-stars" class="create-hotel-input" name="stars" formControlName="stars">
                                 <option value="1">1</option>
-                                <option value="1">2</option>
-                                <option value="1">3</option>
-                                <option value="1">4</option>
-                                <option value="1">5</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
                             </select>
                         </div>
                         <ng-container *ngIf="hotelForm.get('stars')?.touched">
