--- a/client/src/app/core/header/header.component.html
+++ b/client/src/app/core/header/header.component.html
@@ -13,7 +13,7 @@
             <li *ngIf ="!isLoggedIn" routerLink="/login"><a>Login</a></li>
             <li *ngIf ="!isLoggedIn" routerLink="/register"><a>Sign up</a></li>
             <li *ngIf ="isLoggedIn" (click)="logout()"><a>Logout</a></li>
-            <li routerLink="/destinations"><a>Offers</a></li>
+            <li routerLink="/destinations"><a>Destinations</a></li>
         </ul>
         <svg xmlns="http://www.w3.org/2000/svg" class="responsive-menu"
             viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
