--- a/client/src/app/pages/hotel-details/hotel-details.component.css
+++ b/client/src/app/pages/hotel-details/hotel-details.component.css
@@ -86,6 +86,11 @@
     border: none;
     margin-top: 0.2em;
 }
+.not-logged {
+    font-size: 1.2em;
+    margin-top: auto;
+    text-align: center;
+}
 .hotel-details-booking > button {
     display: block;
     width: 100%;
