--- a/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
+++ b/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
@@ -26,7 +26,8 @@
                                 formControlName="hotelName">
                         </div>
                         <ng-container *ngIf="hotelForm.get('hotelName')?.touched">
-                            <p class="error" *ngIf="hotelForm.get('hotelName')?.errors?.['required']; else customValidator">
+                            <p class="error"
+                                *ngIf="hotelForm.get('hotelName')?.errors?.['required']; else customValidator">
                                 *Hotel name is required!
                             </p>
                             <ng-template #customValidator>
@@ -50,11 +51,13 @@
                                 formControlName="hotelLocation">
                         </div>
                         <ng-container *ngIf="hotelForm.get('hotelLocation')?.touched">
-                            <p class="error" *ngIf="hotelForm.get('hotelLocation')?.errors?.['required']; else customValidator">
+                            <p class="error"
+                                *ngIf="hotelForm.get('hotelLocation')?.errors?.['required']; else customValidator">
                                 *Location is required!
                             </p>
                             <ng-template #customValidator>
-                                <p class="error" *ngIf="hotelForm.get('hotelLocation')?.errors?.['customHotelLocation']">
+                                <p class="error"
+                                    *ngIf="hotelForm.get('hotelLocation')?.errors?.['customHotelLocation']">
                                     *Location name must contain only latin letters!
                                 </p>
                             </ng-template>
@@ -65,15 +68,16 @@
                         <div class="create-hotel-input-with-icon">
                             <div class="input-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                                     <path
-                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                        d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM323.8 202.5c-4.5-6.6-11.9-10.5-19.8-10.5s-15.4 3.9-19.8 10.5l-87 127.6L170.7 297c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6h96 32H424c8.9 0 17.1-4.9 21.2-12.8s3.6-17.4-1.4-24.7l-120-176zM112 192a48 48 0 1 0 0-96 48 48 0 1 0 0 96z" />
                                 </svg>
                             </div>
                             <input id="hotel-image" class="create-hotel-input" name="imgURL" formControlName="imgURL">
                         </div>
                         <ng-container *ngIf="hotelForm.get('imgURL')?.touched">
-                            <p class="error" *ngIf="hotelForm.get('imgURL')?.errors?.['required']; else customValidator">
+                            <p class="error"
+                                *ngIf="hotelForm.get('imgURL')?.errors?.['required']; else customValidator">
                                 *Image URL is required!
                             </p>
                             <ng-template #customValidator>
@@ -88,9 +92,9 @@
                         <div class="create-hotel-input-with-icon">
                             <div class="input-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                                     <path
-                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                        d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
                                 </svg>
                             </div>
                             <select id="hotel-stars" class="create-hotel-input" name="stars" formControlName="stars">
@@ -112,9 +116,9 @@
                         <div class="create-hotel-input-with-icon">
                             <div class="input-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                                     <path
-                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                        d="M254 52.8C249.3 40.3 237.3 32 224 32s-25.3 8.3-30 20.8L57.8 416H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32h-1.8l18-48H303.8l18 48H320c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H390.2L254 52.8zM279.8 304H168.2L224 155.1 279.8 304z" />
                                 </svg>
                             </div>
                             <input id="hotel-type" class="create-hotel-input" name="type" formControlName="type">
@@ -131,9 +135,9 @@
                         <div class="create-hotel-input-with-icon">
                             <div class="input-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                                     <path
-                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                        d="M160 0c17.7 0 32 14.3 32 32V67.7c1.6 .2 3.1 .4 4.7 .7c.4 .1 .7 .1 1.1 .2l48 8.8c17.4 3.2 28.9 19.9 25.7 37.2s-19.9 28.9-37.2 25.7l-47.5-8.7c-31.3-4.6-58.9-1.5-78.3 6.2s-27.2 18.3-29 28.1c-2 10.7-.5 16.7 1.2 20.4c1.8 3.9 5.5 8.3 12.8 13.2c16.3 10.7 41.3 17.7 73.7 26.3l2.9 .8c28.6 7.6 63.6 16.8 89.6 33.8c14.2 9.3 27.6 21.9 35.9 39.5c8.5 17.9 10.3 37.9 6.4 59.2c-6.9 38-33.1 63.4-65.6 76.7c-13.7 5.6-28.6 9.2-44.4 11V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V445.1c-.4-.1-.9-.1-1.3-.2l-.2 0 0 0c-24.4-3.8-64.5-14.3-91.5-26.3c-16.1-7.2-23.4-26.1-16.2-42.2s26.1-23.4 42.2-16.2c20.9 9.3 55.3 18.5 75.2 21.6c31.9 4.7 58.2 2 76-5.3c16.9-6.9 24.6-16.9 26.8-28.9c1.9-10.6 .4-16.7-1.3-20.4c-1.9-4-5.6-8.4-13-13.3c-16.4-10.7-41.5-17.7-74-26.3l-2.8-.7 0 0C119.4 279.3 84.4 270 58.4 253c-14.2-9.3-27.5-22-35.8-39.6c-8.4-17.9-10.1-37.9-6.1-59.2C23.7 116 52.3 91.2 84.8 78.3c13.3-5.3 27.9-8.9 43.2-11V32c0-17.7 14.3-32 32-32z" />
                                 </svg>
                             </div>
                             <input id="hotel-price" class="create-hotel-input" name="price" formControlName="price">
@@ -154,9 +158,9 @@
                         <div class="create-hotel-input-with-icon">
                             <div class="input-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                    viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                                     <path
-                                        d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM323.8 202.5c-4.5-6.6-11.9-10.5-19.8-10.5s-15.4 3.9-19.8 10.5l-87 127.6L170.7 297c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6h96 32H424c8.9 0 17.1-4.9 21.2-12.8s3.6-17.4-1.4-24.7l-120-176zM112 192a48 48 0 1 0 0-96 48 48 0 1 0 0 96z" />
+                                        d="M254 52.8C249.3 40.3 237.3 32 224 32s-25.3 8.3-30 20.8L57.8 416H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32h-1.8l18-48H303.8l18 48H320c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H390.2L254 52.8zM279.8 304H168.2L224 155.1 279.8 304z" />
                                 </svg>
                             </div>
                             <!-- fix this  -->
@@ -164,7 +168,8 @@
                                 formControlName="freeRooms">
                         </div>
                         <ng-container *ngIf="hotelForm.get('freeRooms')?.touched">
-                            <p class="error" *ngIf="hotelForm.get('freeRooms')?.errors?.['required']; else customValidator">
+                            <p class="error"
+                                *ngIf="hotelForm.get('freeRooms')?.errors?.['required']; else customValidator">
                                 *Free rooms is required!
                             </p>
                             <ng-template #customValidator>
@@ -183,7 +188,8 @@
                                 formControlName="description"></textarea>
                         </div>
                         <ng-container *ngIf="hotelForm.get('description')?.touched">
-                            <p class="error" *ngIf="hotelForm.get('description')?.errors?.['required']; else customValidator">
+                            <p class="error"
+                                *ngIf="hotelForm.get('description')?.errors?.['required']; else customValidator">
                                 *Description is required!
                             </p>
                             <ng-template #customValidator>
@@ -195,10 +201,10 @@
                     </div>
                 </div>
             </div>
-                <div class="create-hotel-buttons">
-                    <button id="create-button" type="submit">Create</button>
-                    <button id="cancel-button" (click)="closeHotelModal()">Cancel</button>
-                </div>
+            <div class="create-hotel-buttons">
+                <button id="create-button" type="submit">Create</button>
+                <button id="cancel-button" (click)="closeHotelModal()">Cancel</button>
+            </div>
         </form>
     </div>
 </div>
